--- a/source_code/_config.yml
+++ b/source_code/_config.yml
@@ -13,8 +13,8 @@ author:
   github: http://github.com/deeper-think
 
 # 站点信息
-title: 网宿新品产品运营组知识管理与共享 
-description: 网宿新品产品运营组知识管理与共享 
+title: 徐超 
+description: 徐超
 
 # gavatar头像及Favicon
 gavatar: http://7u2rbh.com1.z0.glb.clouddn.com/09-024458_765.jpg
